@@ -1,3 +1,5 @@
+(r3757) For OSX get the path to the game data from the bundle.
+(r3755) Remove caching of shade tables on disk.
 (r3721) Fix a vanilla bug: When starting a new game, the date of the first history entry was set to the date of the last loaded game.
 (r3708) Fix a vanilla bug: Items on top and in structures (tables, crates, etc.) could not be selected in the overhead map.
 (r3704) Enable toggling between fullscreen and window mode at runtime by pressing ALT+RETURN.
